--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="container">
       <nav class="header__inner">
-        <a href="" class="logo">
+        <a class="logo" href="#">
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
 
@@ -37,10 +37,10 @@
 
         <ul class="header__buttons">
           <li class="header__btn">
-            <a href="" class="button button--small">Регистрация</a>
+            <a class="button button--small" href="#">Регистрация</a>
           </li>
           <li class="header__btn">
-            <a href="" class="button button--black button--small">Войти</a>
+            <a class="button button--black button--small" href="#">Войти</a>
           </li>
         </ul>
       </nav>
@@ -48,7 +48,10 @@
   </header>
 
   <main>
-    <section class="wrapper">
+    <h1 class="sr-only">freelancehunt
+      <span class="sr-only">Биржа лучших фрилансеров и удаленной работы</span>
+    </h1>
+    <section class="wrapper" style="  background-image: url(images/wrapper/bg.jpg);">
       <div class="container">
         <div class="wrapper__inner">
           <div class="wrapper__main">
@@ -62,44 +65,44 @@
                 и получайте новые заказы каждую минуту</p>
             </div>
             <div class="wrapper__btn">
-              <a class="button" href="">Начать сейчас</a>
+              <a class="button" href="#">Начать сейчас</a>
             </div>
             <div class="wrapper__question">
               <span class="wrapper__answer">Вы ищите исполните? </span>
-              <a class="wrapper__answer wrapper__answer--red" href="">Войти как заказчик</a>
+              <a class="wrapper__answer wrapper__answer--red" href="#">Войти как заказчик</a>
             </div>
           </div>
         </div>
 
         <ul class="wrapper__list">
           <li class="wrapper__item">
-            <img class="wrapper__img" src="images/wrapper/1.png" alt="">
+            <img class="wrapper__img" src="images/wrapper/1.png" alt="Приват банк">
           </li>
 
           <li class="wrapper__item">
-            <img class="wrapper__img" src="images/wrapper/2.png" alt="">
+            <img class="wrapper__img" src="images/wrapper/2.png" alt="SE Ranking">
           </li>
 
           <li class="wrapper__item">
-            <img class="wrapper__img" src="images/wrapper/3.png" alt="">
+            <img class="wrapper__img" src="images/wrapper/3.png" alt="Alibaba">
           </li>
 
           <li class="wrapper__item">
-            <img class="wrapper__img" src="images/wrapper/4.png" alt="">
+            <img class="wrapper__img" src="images/wrapper/4.png" alt="Dominos">
           </li>
 
           <li class="wrapper__item">
-            <img class="wrapper__img" src="images/wrapper/5.png" alt="">
+            <img class="wrapper__img" src="images/wrapper/5.png" alt="нетология">
           </li>
 
           <li class="wrapper__item">
-            <img class="wrapper__img" src="images/wrapper/6.png" alt="">
+            <img class="wrapper__img" src="images/wrapper/6.png" alt="ЛУН">
           </li>
         </ul>
       </div>
     </section>
 
-    <section class="how">
+    <section class="how" style=" background-image: url(images/how/bg.png);">
       <div class="container">
         <div class="how__inner">
           <div class="how__title">
@@ -201,7 +204,8 @@
                 <div class="why__text">
                   <p>Отдельный <span class="why__red">бухгалтерский веб-кабинет</span>. Можно добавлять дополнителье
                     <span class="why__red">номера телефонов для</span> работы в
-                    веб-кабине со счетом ФОП</p>
+                    веб-кабине со счетом ФОП
+                  </p>
                 </div>
               </li>
 
@@ -299,7 +303,7 @@
               <p>Найдите своих идеальных заказчиков прямо сейчас и
                 получайте интересные заказы.</p>
             </div>
-            <a class="button" href="">Купить подписку</a>
+            <a class="button" href="#">Купить подписку</a>
           </div>
         </div>
 
@@ -368,7 +372,7 @@
         <ul class="best__list">
           <li class="best__item">
             <article class="freelancer">
-              <a href="#" class="freelancer__link">
+              <a class="freelancer__link" href="#">
                 <div class="freelancer__inner">
                   <address class="freelancer__address">South Haven, USA</address>
                   <span class="freelancer__status">Full-time</span>
@@ -378,7 +382,7 @@
                   </div>
                   <div class="freelancer__prof">
                     <div class="freelancer__ava">
-                      <img class="freelancer__avatar" src="images/best/ava.png" alt="">
+                      <img class="freelancer__avatar" src="images/best/ava.png" alt="avatar">
                     </div>
                     <div class="freelancer__desc">
                       <h4 class="freelancer__name">Cravers Tech</h4>
@@ -392,7 +396,7 @@
 
           <li class="best__item">
             <article class="freelancer">
-              <a href="#" class="freelancer__link">
+              <a class="freelancer__link" href="#">
                 <div class="freelancer__inner">
                   <address class="freelancer__address">South Haven, USA</address>
                   <span class="freelancer__status">Full-time</span>
@@ -402,7 +406,7 @@
                   </div>
                   <div class="freelancer__prof">
                     <div class="freelancer__ava">
-                      <img class="freelancer__avatar" src="images/best/ava.png" alt="">
+                      <img class="freelancer__avatar" src="images/best/ava.png" alt="avatar">
                     </div>
                     <div class="freelancer__desc">
                       <h4 class="freelancer__name">Cravers Tech</h4>
@@ -416,7 +420,7 @@
 
           <li class="best__item">
             <article class="freelancer">
-              <a href="#" class="freelancer__link">
+              <a class="freelancer__link" href="#">
                 <div class="freelancer__inner">
                   <address class="freelancer__address">South Haven, USA</address>
                   <span class="freelancer__status">Full-time</span>
@@ -426,7 +430,7 @@
                   </div>
                   <div class="freelancer__prof">
                     <div class="freelancer__ava">
-                      <img class="freelancer__avatar" src="images/best/ava.png" alt="">
+                      <img class="freelancer__avatar" src="images/best/ava.png" alt="avatar">
                     </div>
                     <div class="freelancer__desc">
                       <h4 class="freelancer__name">Cravers Tech</h4>
@@ -440,7 +444,7 @@
 
           <li class="best__item">
             <article class="freelancer">
-              <a href="#" class="freelancer__link">
+              <a class="freelancer__link" href="#">
                 <div class="freelancer__inner">
                   <address class="freelancer__address">South Haven, USA</address>
                   <span class="freelancer__status">Full-time</span>
@@ -450,7 +454,7 @@
                   </div>
                   <div class="freelancer__prof">
                     <div class="freelancer__ava">
-                      <img class="freelancer__avatar" src="images/best/ava.png" alt="">
+                      <img class="freelancer__avatar" src="images/best/ava.png" alt="avatar">
                     </div>
                     <div class="freelancer__desc">
                       <h4 class="freelancer__name">Cravers Tech</h4>
@@ -464,7 +468,7 @@
 
           <li class="best__item">
             <article class="freelancer">
-              <a href="#" class="freelancer__link">
+              <a class="freelancer__link" href="#">
                 <div class="freelancer__inner">
                   <address class="freelancer__address">South Haven, USA</address>
                   <span class="freelancer__status">Full-time</span>
@@ -474,7 +478,7 @@
                   </div>
                   <div class="freelancer__prof">
                     <div class="freelancer__ava">
-                      <img class="freelancer__avatar" src="images/best/ava.png" alt="">
+                      <img class="freelancer__avatar" src="images/best/ava.png" alt="avatar">
                     </div>
                     <div class="freelancer__desc">
                       <h4 class="freelancer__name">Cravers Tech</h4>
@@ -488,7 +492,7 @@
 
           <li class="best__item">
             <article class="freelancer">
-              <a href="#" class="freelancer__link">
+              <a class="freelancer__link" href="#">
                 <div class="freelancer__inner">
                   <address class="freelancer__address">South Haven, USA</address>
                   <span class="freelancer__status">Full-time</span>
@@ -498,7 +502,7 @@
                   </div>
                   <div class="freelancer__prof">
                     <div class="freelancer__ava">
-                      <img class="freelancer__avatar" src="images/best/ava.png" alt="">
+                      <img class="freelancer__avatar" src="images/best/ava.png" alt="avatar">
                     </div>
                     <div class="freelancer__desc">
                       <h4 class="freelancer__name">Cravers Tech</h4>
@@ -522,7 +526,8 @@
           <h3 class="footer__title">Weblancer</h3>
           <ul class="footer__contacts">
             <li class="footer__social">
-              <a href="" class="footer__link">
+              <a class="footer__link" href="#">
+                <span class="sr-only">перейти на аккаунт в вк</span>
                 <svg class="svg-footer">
                   <use xlink:href="images/sprite.svg#footer--vk"></use>
                 </svg>
@@ -530,7 +535,8 @@
             </li>
 
             <li class="footer__social">
-              <a href="" class="footer__link">
+              <a class="footer__link" href="#">
+                <span class="sr-only">перейти на аккаунт в телеграме</span>
                 <svg class="svg-footer">
                   <use xlink:href="images/sprite.svg#footer--telega"></use>
                 </svg>
@@ -538,7 +544,8 @@
             </li>
 
             <li class="footer__social">
-              <a href="" class="footer__link">
+              <a class="footer__link" href="#">
+                <span class="sr-only">перейти на аккаунт в инстаграме</span>
                 <svg class="svg-footer svg-footer--height">
                   <use xlink:href="images/sprite.svg#footer--inst"></use>
                 </svg>
@@ -546,7 +553,8 @@
             </li>
 
             <li class="footer__social">
-              <a href="" class="footer__link">
+              <a class="footer__link" href="#">
+                <span class="sr-only">перейти на аккаунт в фейсбуке</span>
                 <svg class="svg-footer svg-footer--height">
                   <use xlink:href="images/sprite.svg#footer--face"></use>
                 </svg>
